--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -63,7 +63,7 @@
             Telefono:
             <span>334 715 6790</span>
             Indirizzo:
-            <a href="https://maps.app.goo.gl/eR8XKD4H9FD7Wwu67"><span>Via Soleschiano 90/L</span></a>
+            <span>CENSURATO/L</span>
         </div>
     </div>
 </body>
